--- a/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
+++ b/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
@@ -98,7 +98,8 @@
       </div>
     </div>
 
-    <script src="~/Scripts/jquery-1.9.1.min.js"></script>
+    <script src="~/Scripts/jquery-1.9.1.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    @RenderSection("scripts", false)
 </body>
 </html>
