Link to the github repo is nice

--- a/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
+++ b/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
@@ -94,7 +94,8 @@
 
     <div id="footer">
       <div class="container">
-        <p class="muted credit">Example courtesy <a href="http://twitter.com/djbyter" target="_blank">Kori Francis</a>, @DateTime.Now.Year.</p>
+        <p class="muted credit">Example courtesy <a href="http://twitter.com/djbyter" target="_blank">Kori Francis</a> based on the documentation <a href="http://docs.chargify.com/chargify-direct-introduction" target="_blank">here</a>. See <a href="https://github.com/kfrancis/ChargifyDirectSampleDotNet" target="_blank"><code>Github Repo</code></a>, @DateTime.Now.Year.
+        </p>
       </div>
     </div>
 
