--- a/Source/ChargifyDirectExample.MVC4/Views/Home/Index.cshtml
+++ b/Source/ChargifyDirectExample.MVC4/Views/Home/Index.cshtml
@@ -30,6 +30,25 @@
         </div>
     </div>
 
+    @if (!string.IsNullOrWhiteSpace(System.Configuration.ConfigurationManager.AppSettings["ComponentID"]))
+    {
+        <div class="well">
+            <h5>$1 Widgets</h5>
+            <div class="control-group">
+                <label class="control-label" for="signup_coupon_code">How Many Widgets?</label>
+                <div class="controls">
+                    <select name="signup[components][@System.Configuration.ConfigurationManager.AppSettings["ComponentID"]]" id="signup_widgets">
+                        <option value="">Please Select</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
+                </div>
+            </div>
+        </div>
+    }
+
     <div class="well">
         <h5>Coupon</h5>
         <div id="couponGroup" class="control-group">
