--- a/Source/ChargifyDirectExample.MVC4/Views/Home/Index.cshtml
+++ b/Source/ChargifyDirectExample.MVC4/Views/Home/Index.cshtml
@@ -142,6 +142,14 @@
 @section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
+            $('form:first').submit(function () {
+                // Magic, don't post empty values for coupon and component
+                $(this).find('input, textarea, select').each(function () {
+                    if ($(this).val() === '' || $(this).val() === null)
+                        $(this).attr("disabled", "disabled");
+                });
+                return true;
+            });
             $("#verifyCoupon").click(function () {
                 $.ajax({
                     type: "GET",
