--- a/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
+++ b/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
@@ -12,58 +12,60 @@
     <meta name="author" content="Kori Francis">
     <link href="@Url.Content("~/Content/bootstrap.min.css")" rel="stylesheet" media="screen" />
     <style type="text/css">
-
-      /* Sticky footer styles
+        /* Sticky footer styles
       -------------------------------------------------- */
 
-      html,
-      body {
-        height: 100%;
-        /* The html and body elements cannot have any padding or margin. */
-      }
-
-      /* Wrapper for page content to push down footer */
-      #wrap {
-        min-height: 100%;
-        height: auto !important;
-        height: 100%;
-        /* Negative indent footer by it's height */
-        margin: 0 auto -60px;
-      }
-
-      /* Set the fixed height of the footer here */
-      #push,
-      #footer {
-        height: 60px;
-      }
-      #footer {
-        background-color: #f5f5f5;
-      }
-
-      /* Lastly, apply responsive CSS fixes as necessary */
-      @@media (max-width: 767px) {
-        #footer {
-          margin-left: -20px;
-          margin-right: -20px;
-          padding-left: 20px;
-          padding-right: 20px;
+        html,
+        body {
+            height: 100%;
+            /* The html and body elements cannot have any padding or margin. */
         }
-      }
+
+        /* Wrapper for page content to push down footer */
+        #wrap {
+            min-height: 100%;
+            height: auto !important;
+            height: 100%;
+            /* Negative indent footer by it's height */
+            margin: 0 auto -60px;
+        }
+
+        /* Set the fixed height of the footer here */
+        #push,
+        #footer {
+            height: 60px;
+        }
+
+        #footer {
+            background-color: #f5f5f5;
+        }
+
+        /* Lastly, apply responsive CSS fixes as necessary */
+        @@media (max-width: 767px) {
+            #footer {
+                margin-left: -20px;
+                margin-right: -20px;
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+        }
 
 
 
-      /* Custom page CSS
+        /* Custom page CSS
       -------------------------------------------------- */
-      /* Not required for template or sticky footer method. */
+        /* Not required for template or sticky footer method. */
 
-      .container {
-        width: auto;
-        max-width: 680px;
-      }
-      .container .credit {
-        margin: 20px 0;
-      }
-      legend {
+        .container {
+            width: auto;
+            max-width: 680px;
+        }
+
+            .container .credit {
+                margin: 20px 0;
+            }
+
+        legend {
             margin-bottom: 0px;
         }
 
@@ -77,26 +79,30 @@
 <body>
     <div id="wrap">
 
-      <!-- Begin page content -->
-      <div class="container">
-        <div class="page-header">
-          <h1>Chargify Direct .NET Example</h1>
-        </div>
-          @if (!string.IsNullOrWhiteSpace(ViewBag.Message))
+        <!-- Begin page content -->
+        <div class="container">
+            <div class="page-header">
+                <h1>Chargify Direct .NET Example</h1>
+            </div>
+            @if (!string.IsNullOrWhiteSpace(ViewBag.Message))
             {
                 <p style="color: #ff0000">@ViewBag.Message</p>
             }
             @RenderBody()
-      </div>
+        </div>
 
-      <div id="push"></div>
+        <div id="push"></div>
     </div>
 
     <div id="footer">
-      <div class="container">
-        <p class="muted credit">Example courtesy <a href="http://twitter.com/djbyter" target="_blank">Kori Francis</a> based on the documentation <a href="http://docs.chargify.com/chargify-direct-introduction" target="_blank">here</a>. See <a href="https://github.com/kfrancis/ChargifyDirectSampleDotNet" target="_blank"><code>Github Repo</code></a>, @DateTime.Now.Year.
-        </p>
-      </div>
+        <div class="container">
+            <p class="muted credit" style="position: relative;">
+                Example courtesy <a href="http://twitter.com/djbyter" target="_blank">Kori Francis</a> based on the documentation <a href="http://docs.chargify.com/chargify-direct-introduction" target="_blank">here</a>. See <a href="https://github.com/kfrancis/ChargifyDirectSampleDotNet" target="_blank"><code>Github Repo</code></a>, @DateTime.Now.Year.
+                <iframe style="border: 0; margin: 0; padding: 0; position: absolute; top: 0px; right: 5px;"
+                src="https://www.gittip.com/kfrancis/widget.html"
+                width="48pt" height="22pt"></iframe>
+            </p>
+        </div>
     </div>
 
     <script src="~/Scripts/jquery-1.9.1.js"></script>
