Fix footer and readme

--- a/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
+++ b/Source/ChargifyDirectExample.MVC4/Views/Shared/_Layout.cshtml
@@ -97,10 +97,10 @@
     <div id="footer">
         <div class="container">
             <p class="muted credit" style="position: relative;">
-                Example courtesy <a href="http://twitter.com/djbyter" target="_blank">Kori Francis</a> based on the documentation <a href="http://docs.chargify.com/chargify-direct-introduction" target="_blank">here</a>. See <a href="https://github.com/kfrancis/ChargifyDirectSampleDotNet" target="_blank"><code>Github Repo</code></a>, @DateTime.Now.Year.
-                <iframe style="border: 0; margin: 0; padding: 0; position: absolute; top: 0px; right: 5px;"
-                src="https://www.gittip.com/kfrancis/widget.html"
-                width="48pt" height="22pt"></iframe>
+                <span style="position:absolute; top:0; right:0;">Example courtesy <a href="http://twitter.com/djbyter" target="_blank">Kori Francis</a> based on the documentation <a href="http://docs.chargify.com/chargify-direct-introduction" target="_blank">here</a>. See <a href="https://github.com/kfrancis/ChargifyDirectSampleDotNet" target="_blank"><code>Github Repo</code></a>, @DateTime.Now.Year.</span>
+                <script data-gratipay-username="kfrancis"
+                        data-gratipay-widget="button"
+                        src="//gttp.co/v1.js"></script>
             </p>
         </div>
     </div>
