--- a/Source/ChargifyDirectExample.MVC4/Views/Home/Receipt.cshtml
+++ b/Source/ChargifyDirectExample.MVC4/Views/Home/Receipt.cshtml
@@ -22,3 +22,4 @@ else
         ending in @Model.response.signup.payment_profile.masked_card_number.
     </p>
 }
+<p><small><a href="@Url.Action("Call", "Home", new {id = Model.id})">View raw call information</a></small></p>
