Remove last remnants of MVC4

--- a/Source/ChargifyDirectExample.MVC/Views/Shared/_Layout.cshtml
+++ b/Source/ChargifyDirectExample.MVC/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>MVC4 Chargify Direct Example</title>
+    <title>MVC Chargify Direct Example</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Chargify Direct Example">
     <meta name="author" content="Kori Francis">
