--- a/Source/ChargifyDirectExample.MVC/Views/Home/Receipt.cshtml
+++ b/Source/ChargifyDirectExample.MVC/Views/Home/Receipt.cshtml
@@ -22,4 +22,5 @@ else
         ending in @Model.response.signup.payment_profile.masked_card_number.
     </p>
 }
-<p><small><a href="@Url.Action("Call", "Home", new {id = Model.id})">View raw call information</a></small></p>
+<p><small><a href="@Url.Action("Show", "Call", new {id = Model.id})">View raw call information (sync)</a></small></p>
+<p><small><a href="@Url.Action("ShowAsync", "Call", new {id = Model.id})">View raw call information (async)</a></small></p>
