--- a/Source/ChargifyDirectExample.MVC/Views/Call/Show.cshtml
+++ b/Source/ChargifyDirectExample.MVC/Views/Call/Show.cshtml
@@ -36,7 +36,7 @@
     {
         <script type="text/javascript">
             var json = '@Html.Raw(Html.Encode(ViewBag.Result))';
-            $("#result").append(syntaxHighlight(json));
+            $("#result").html(syntaxHighlight(JSON.parse(json)));
         </script>
     }
 }
