--- a/Source/ChargifyDirectExample.MVC/Views/Shared/_Layout.cshtml
+++ b/Source/ChargifyDirectExample.MVC/Views/Shared/_Layout.cshtml
@@ -74,6 +74,7 @@
         }
     </style>
     <link href="~/Content/bootstrap-responsive.min.css" rel="stylesheet" />
+    @RenderSection("head", required: false)
 </head>
 
 <body>
