Update all frameworks and migrate to mvc5

--- a/Source/ChargifyDirectExample.MVC/Views/Home/Index.cshtml
+++ b/Source/ChargifyDirectExample.MVC/Views/Home/Index.cshtml
@@ -18,25 +18,23 @@
     </div>
 }
 
-<form class="form-horizontal" method="post" action="https://api.chargify.com/api/v2/signups">
+<form class="form-horizontal" role="form" method="post" action="https://api.chargify.com/api/v2/signups">
 @Html.Raw(ChargifyHelper.Chargify().Direct.SecureParameters(new System.Collections.Hashtable(){
         {"redirect_uri", Url.Action("Verify", "Home", null, Request.Url.Scheme, null)},
         {"nonce", ViewBag.Nonce },
         {"timestamp", ViewBag.Timestamp.ToString() }
     }).ToFormInputs())
-    <div class="well">
-        <h5>Select Plan</h5>
-        <div class="control-group">
-            <label class="control-label">Product:</label>
-            <div class="controls">
-                <label class="radio">
-                    <input type="radio" name="signup[product][handle]" id="signup_product_handle_basic" value="basic" @if (ViewData.ContainsKey("product_handle") && ViewBag.product_handle == "basic")
-                                                                                                                      {<text>checked</text>}/>
+    <div class="panel panel-default">
+        <div class="panel-heading">Select Plan</div>
+        <div class="panel-body form-group">
+            <label class="col-xs-3 control-label">Product:</label>
+            <div class="col-xs-9">
+                <label class="radio-inline">
+                    <input type="radio" name="signup[product][handle]" id="signup_product_handle_basic" value="basic" @if (ViewData.ContainsKey("product_handle") && ViewBag.product_handle == "basic") { <text> checked</text>} />
                     Basic
                 </label>
-                <label class="radio">
-                    <input type="radio" name="signup[product][handle]" id="signup_product_handle_premium" value="premium" @if (ViewData.ContainsKey("product_handle") && ViewBag.product_handle == "premium")
-                                                                                                                          {<text>checked</text>}/>
+                <label class="radio-inline">
+                    <input type="radio" name="signup[product][handle]" id="signup_product_handle_premium" value="premium" @if (ViewData.ContainsKey("product_handle") && ViewBag.product_handle == "premium") { <text> checked</text>} />
                     Premium
                 </label>
             </div>
@@ -45,12 +43,12 @@
 
     @if (!string.IsNullOrWhiteSpace(System.Configuration.ConfigurationManager.AppSettings["ComponentID"]))
     {
-        <div class="well">
-            <h5>$1 Widgets</h5>
-            <div class="control-group">
-                <label class="control-label" for="signup_coupon_code">How Many Widgets?</label>
-                <div class="controls">
-                    <select name="signup[components][@System.Configuration.ConfigurationManager.AppSettings["ComponentID"]]" id="signup_widgets">
+        <div class="panel panel-default">
+            <div class="panel-heading">$1 Widgets</div>
+            <div class="panel-body form-group">
+                <label class="col-xs-3 control-label" for="signup_coupon_code">How Many Widgets?</label>
+                <div class="col-xs-9">
+                    <select class="form-control" name="signup[components][@System.Configuration.ConfigurationManager.AppSettings["ComponentID"]]" id="signup_widgets">
                         <option value="">Please Select</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
@@ -62,93 +60,97 @@
         </div>
     }
 
-    <div class="well">
-        <h5>Coupon</h5>
-        <div id="couponGroup" class="control-group">
-            <label class="control-label" for="signup_coupon_code">Coupon Code</label>
-            <div class="controls">
-                <div class="input-append">
-                    <input class="span2" type="text" name="signup[coupon_code]" id="signup_coupon_code" @if (ViewData.ContainsKey("coupon_code"))
-                                                                                                        {<text>value="@ViewBag.coupon_code"</text>} />
-                    <button class="btn" type="button" id="verifyCoupon">Verify!</button>
+    <div class="panel panel-default">
+        <div class="panel-heading">Coupon</div>
+        <div class="panel-body">
+            <div id="couponGroup" class="form-group">
+                <label class="col-xs-3 control-label" for="signup_coupon_code">Coupon Code</label>
+                <div class="col-xs-9">
+                    <input class="form-control" type="text" name="signup[coupon_code]" id="signup_coupon_code" @if (ViewData.ContainsKey("coupon_code")) { <text> value="@ViewBag.coupon_code" </text>     } />
+                    <button class="btn btn-success" type="button" id="verifyCoupon">Verify!</button>
+                    <p class="help-block">Try 'awesome'</p>
                 </div>
-                <span class="help-inline">Try 'awesome'</span>
             </div>
         </div>
     </div>
 
-    <div class="well">
-        <h5>About You</h5>
-        <div class="control-group">
-            <label class="control-label" for="signup_customer_first_name">First Name</label>
-            <div class="controls">
-                <input type="text" name="signup[customer][first_name]" id="signup_customer_first_name" @if (ViewData.ContainsKey("customer.first_name"))
-                                                                                                       {<text>value="@ViewData["customer.first_name"]"</text>} />
+    <div class="panel panel-default">
+        <div class="panel-heading">About You</div>
+        <div class="panel-body">
+            <div class="form-group">
+                <label class="col-xs-3 control-label" for="signup_customer_first_name">First Name</label>
+                <div class="col-xs-9">
+                    <input type="text" class="form-control" name="signup[customer][first_name]" id="signup_customer_first_name" @if (ViewData.ContainsKey("customer.first_name")) { <text> value="@ViewData["customer.first_name"]" </text>    } />
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="signup_customer_last_name">Last Name</label>
-            <div class="controls">
-                <input type="text" name="signup[customer][last_name]" id="signup_customer_last_name" @if (ViewData.ContainsKey("customer.last_name"))
-                                                                                                     {<text>value="@ViewData["customer.last_name"]"</text>}/>
+
+            <div class="form-group">
+                <label class="col-xs-3 control-label" for="signup_customer_last_name">Last Name</label>
+                <div class="col-xs-9">
+                    <input type="text" class="form-control" name="signup[customer][last_name]" id="signup_customer_last_name" @if (ViewData.ContainsKey("customer.last_name")) { <text> value="@ViewData["customer.last_name"]" </text>    } />
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="signup_customer_email">Email</label>
-            <div class="controls">
-                <input type="text" name="signup[customer][email]" id="signup_customer_email" @if (ViewData.ContainsKey("customer.email"))
-                                                                                             {<text>value="@ViewData["customer.email"]"</text>}/>
+
+            <div class="form-group">
+                <label class="col-xs-3 control-label" for="signup_customer_email">Email</label>
+                <div class="col-xs-9">
+                    <input type="text" class="form-control" name="signup[customer][email]" id="signup_customer_email" @if (ViewData.ContainsKey("customer.email")) { <text> value="@ViewData["customer.email"]" </text>     } />
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="well">
-        <h5>Payment Profile</h5>
-        <div class="control-group">
-            <label class="control-label" for="signup_payment_profile_first_name">First Name on Card</label>
-            <div class="controls">
-                <input type="text" name="signup[payment_profile][first_name]" id="signup_payment_profile_first_name" @if (ViewData.ContainsKey("payment_profile.first_name"))
-                                                                                                                     {<text>value="@ViewData["payment_profile.first_name"]"</text>} />
+    <div class="panel panel-default">
+        <div class="panel-heading">Payment Profile</div>
+        <div class="panel-body">
+            <div class="form-group">
+                <label class="col-xs-3 control-label" for="signup_payment_profile_first_name">First Name on Card</label>
+                <div class="col-xs-9">
+                    <input type="text" class="form-control" name="signup[payment_profile][first_name]" id="signup_payment_profile_first_name" @if (ViewData.ContainsKey("payment_profile.first_name")) { <text> value="@ViewData["payment_profile.first_name"]" </text>    } />
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="signup_payment_profile_first_name">Last Name on Card</label>
-            <div class="controls">
-                <input type="text" name="signup[payment_profile][last_name]" id="signup_payment_profile_last_name" @if (ViewData.ContainsKey("payment_profile.last_name"))
-                                                                                                                   {<text>value="@ViewData["payment_profile.last_name"]"</text>} />
+
+            <div class="form-group">
+                <label class="col-xs-3 control-label" for="signup_payment_profile_first_name">Last Name on Card</label>
+                <div class="col-xs-9">
+                    <input type="text" class="form-control" name="signup[payment_profile][last_name]" id="signup_payment_profile_last_name" @if (ViewData.ContainsKey("payment_profile.last_name")) { <text> value="@ViewData["payment_profile.last_name"]" </text>     } />
+                </div>
             </div>
-        </div>
-        <div class="control-group">
-            <label class="control-label" for="signup_payment_profile_card_number">Card Number</label>
-            <div class="controls">
-                <input type="text" name="signup[payment_profile][card_number]" id="signup_payment_profile_card_number" @if (ViewData.ContainsKey("payment_profile.card_number"))
-                                                                                                                       {<text>value="@ViewData["payment_profile.card_number"]"</text>} />
+
+            <div class="form-group">
+                <label class="col-xs-3 control-label" for="signup_payment_profile_card_number">Card Number</label>
+                <div class="col-xs-9">
+                    <input type="text" class="form-control" name="signup[payment_profile][card_number]" id="signup_payment_profile_card_number" @if (ViewData.ContainsKey("payment_profile.card_number")) { <text> value="@ViewData["payment_profile.card_number"]" </text>     } />
+                </div>
             </div>
-        </div>
-        <div class="control-group row">
-            <label class="control-label span1">Expiration</label>
-            <div class="controls">
-                &nbsp;&nbsp;&nbsp;&nbsp;
-                <select name="signup[payment_profile][expiration_month]" id="signup_payment_profile_expiration_month" style="width:75px;">
-                    @for (int i = 1; i <= 12; i++)
-                    {
-                        <option value="@i" @if (ViewData["payment_profile.expiration_month"] == i.ToString())
-                                           {<text>selected</text>}>@i.ToString("D2")</option>    
-                    }
-                </select>
-                <select name="signup[payment_profile][expiration_year]" id="signup_payment_profile_expiration_year" style="width:140px;">
-                    @for (int i = DateTime.Now.Year; i < DateTime.Now.Year + 10; i++)
-                    {
-                        <option value="@i" @if (ViewData["payment_profile.expiration_year"] == i.ToString())
-                                           {<text>selected</text>}>@i.ToString()</option>    
-                    }
-                </select>
+
+            <div class="form-group row">
+                <label class="col-xs-3 control-label span1">Expiration</label>
+                <div class="col-xs-9 input-group">
+                    <span class="input-group-btn">
+                        <select class="form-control" name="signup[payment_profile][expiration_month]" id="signup_payment_profile_expiration_month" style="width:75px;">
+                            @for (int i = 1; i <= 12; i++)
+                            {
+                                <option value="@i" @if (ViewData["payment_profile.expiration_month"] == i.ToString() || i.ToString() == DateTime.Now.Month.ToString())
+                                                   { <text> selected</text>}>@i.ToString("D2")</option>
+                            }
+                        </select>
+                        /
+                    </span>
+                    <span class="input-group-btn">
+                        <select class="form-control" name="signup[payment_profile][expiration_year]" id="signup_payment_profile_expiration_year" style="width:140px;">
+                            @for (int i = DateTime.Now.Year; i < DateTime.Now.Year + 10; i++)
+                            {
+                                <option value="@i" @if (ViewData["payment_profile.expiration_year"] == i.ToString() || i.ToString() == DateTime.Now.Year.ToString()) { <text> selected</text>}>@i.ToString()</option>
+                            }
+                        </select>
+                    </span>
+                </div>
             </div>
         </div>
     </div>
-
     <p>
-        <input class="btn btn-large btn-primary" type="submit" value="Sign Up" />
+        <input class="btn btn-lg btn-primary" type="submit" value="Sign Up" />
     </p>
 </form>
 
