--- a/Source/ChargifyDirectExample.MVC/Views/Call/ShowAsync.cshtml
+++ b/Source/ChargifyDirectExample.MVC/Views/Call/ShowAsync.cshtml
@@ -49,7 +49,9 @@
     {
         <script type="text/javascript">
             var json = '@Html.Raw(Html.Encode(ViewBag.Result))';
-            $("#result").html(syntaxHighlight(JSON.parse(json)));
+            var parsedJson = JSON.parse($('<div/>').html(json).text());
+            var highlightResult = syntaxHighlight(parsedJson);
+            $("#result").html(highlightResult);
         </script>
     }
 }
