--- a/Source/ChargifyDirectExample.MVC/Views/Shared/_Layout.cshtml
+++ b/Source/ChargifyDirectExample.MVC/Views/Shared/_Layout.cshtml
@@ -97,7 +97,7 @@
     <div id="footer">
         <div class="container">
             <p class="muted credit" style="position: relative;">
-                <span style="position:absolute; top:0; right:0;">Example courtesy <a href="http://twitter.com/djbyter" target="_blank">Kori Francis</a> based on the documentation <a href="http://docs.chargify.com/chargify-direct-introduction" target="_blank">here</a>. See <a href="https://github.com/kfrancis/ChargifyDirectSampleDotNet" target="_blank"><code>Github Repo</code></a>, @DateTime.Now.Year.</span>
+                <span style="position:absolute; top:0; right:0;">Example courtesy <a href="http://twitter.com/korifrancis" target="_blank">Kori Francis</a> based on the documentation <a href="http://docs.chargify.com/chargify-direct-introduction" target="_blank">here</a>. See <a href="https://github.com/kfrancis/ChargifyDirectSampleDotNet" target="_blank"><code>Github Repo</code></a>, @DateTime.Now.Year.</span>
                 <script data-gratipay-username="kfrancis"
                         data-gratipay-widget="button"
                         src="//gttp.co/v1.js"></script>
